--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_RAPID_API_KEY = 'eb6d684b20mshd3b4025d7c50329p141521jsn8cb44c488bff'
-REACT_APP_COINRANKING_HOST = 'coinranking1.p.rapidapi.com'
-REACT_APP_COINRANKING_URL = 'https://coinranking1.p.rapidapi.com'
+REACT_APP_RAPID_API_KEY = 'coinranking56eda07976e75d5522627e6c00d9d6ac3f13d50ad720d326'
+REACT_APP_COINRANKING_HOST = 'api.coinranking.com/v2'
+REACT_APP_COINRANKING_URL = 'https://api.coinranking.com/v2'
 REACT_APP_BING_URL = 'https://bing-news-search1.p.rapidapi.com'
 REACT_APP_BING_HOST = 'bing-news-search1.p.rapidapi.com'
 
